Added another media query for desktop users

--- a/flexstyle.css
+++ b/flexstyle.css
@@ -132,7 +132,19 @@ ul {
 }
 
 
+@media (max-width: 750px) {
 
+  .header .container {
+    flex-direction: column;
+    padding-top: 20px;
+    text-align: center;
+  }
+
+  .boxes .container {
+    display: block;
+    text-align: center;
+  }
+}
 
 
 
